# UnityExplorer

./: .gitignore  CLAUDE.md  README.md  build.ps1
.github/workflows/: dotnet.yml
mcp-server/: README.md  pyproject.toml
mcp-server/src/unityexplorer_mcp/: __init__.py  bridge.py  protocol.py  server.py
src/: ExplorerBehaviour.cs  ExplorerCore.cs  UnityExplorer.csproj  UnityExplorer.sln
src/Config/: ConfigManager.cs
src/MCP/: CommandDispatcher.cs  CommandTypes.cs  JsonHelper.cs  LockedQueue.cs  MCPBridge.cs  ObjectRegistry.cs
src/MCP/Handlers/: ConsoleCommandHandler.cs  HierarchyCommandHandler.cs  InspectionCommandHandler.cs  LogCommandHandler.cs  SceneCommandHandler.cs  ScreenshotCommandHandler.cs  SearchCommandHandler.cs  StatusCommandHandler.cs
