[project]
name = "unityexplorer-mcp"
version = "0.1.0"
description = "MCP server for UnityExplorer - inspect and interact with Unity games"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.2.0",
    "websockets>=14.0",
]

[project.scripts]
server = "unityexplorer_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/unityexplorer_mcp"]
